Bevel doesn't correctly work with default empty Vgroup #52176

Closed
opened 2017-07-24 17:48:43 +02:00 by Serge Lyatin · 7 comments

System Information
Win7 64bit

Blender Version
Broken: 2.78c

Short description of error
Bevel doesn't correctly work with default empty Vgroup, until manually click Assign in edit mode

Exact steps for others to reproduce the error
Load default scene
Click "+" button to create Vgroup
Add Bevel modifier to the cube and switch to Vgroup method
Choose Vgroup you have created-> Bevel is working, but shouldn't

**System Information** Win7 64bit **Blender Version** Broken: 2.78c **Short description of error** Bevel doesn't correctly work with default empty Vgroup, until manually click *Assign* in edit mode **Exact steps for others to reproduce the error** Load default scene Click "+" button to create Vgroup Add Bevel modifier to the cube and switch to Vgroup method Choose Vgroup you have created-> Bevel is working, but shouldn't
Author

Changed status to: 'Open'

Changed status to: 'Open'
Author

Added subscriber: @SergeL

Added subscriber: @SergeL
Serge Lyatin changed title from Bevel doesn't correctly work with default empty group to Bevel doesn't correctly work with default empty Vgroup 2017-07-24 18:45:41 +02:00

Added subscriber: @mont29

Added subscriber: @mont29
Bastien Montagne self-assigned this 2017-07-26 16:21:05 +02:00

This is actually a bug in our defvert_array_find_weight_safe(), which was assuming that having a valid vgroup index but NULL vgroup data pointer was same as not having a valid vgroup index, and was returning '1.0' in both cases.

This is wrong, invalid vgroup index means the vgroup selected is invalid, does not exists, in that case it is OK to return 1.0 (i.e. maximum weight, as if no vgroup was selected).

But in case of valid vgroup and NULL vgroup data pointer, only means that vgroup is valid, and just totally empty, so we shall return '0.0' value then!

This is actually a bug in our `defvert_array_find_weight_safe()`, which was assuming that having a valid vgroup index but NULL vgroup data pointer was same as not having a valid vgroup index, and was returning '1.0' in both cases. This is wrong, invalid vgroup index means the vgroup selected is invalid, does not exists, in that case it is OK to return 1.0 (i.e. maximum weight, as if no vgroup was selected). But in case of valid vgroup and NULL vgroup data pointer, only means that vgroup **is** valid, and just totally empty, so we shall return '0.0' value then!

Note that this affect other modifiers too (shrinkwrap and simple deform at least).

Note that this affect other modifiers too (shrinkwrap and simple deform at least).

This issue was referenced by 66e28a2827

This issue was referenced by 66e28a2827ab589756882983e07808742c198cb2

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#52176
No description provided.